<resources>
    <string name="app_name">BulletinBoardJavaVersion</string>

    <!--drawer_main_menu-->
    <string name="my_ads">My announcements</string>
    <string name="cars_ads">Cars</string>
    <string name="pc_ads">Personal computers</string>
    <string name="smartphone_ads">Smartphone</string>
    <string name="appliances_ads">Appliances</string>

    <string name="sign_up">Registration</string>
    <string name="sign_in">Login to your account</string>
    <string name="sign_out">Exit</string>
    <string name="account">Account</string>


    <string name="banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!--alert_sign_up_layout-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_button">Register</string>
    <string name="sign_in_button">To come in</string>

    <!--User LoginIn or SignUp -->
    <string name="signInOrSignUp">Login or register</string>

    <!--Edit Activity -->
    <string name="edit_act_title">Title Ad</string>
    <string name="edit_act_price">Price:</string>
    <string name="edit_act_description">Description:</string>
    <string name="edit_tel_numb">Telephone number:</string>
    <string name="progress_bar">Loading..</string>

    <!--main content -->
    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>

    <!--Main Activity -->

    <string name="delete_title">Delete ads</string>
    <string name="delete_message">Are you sure you want to delete the ad?</string>
    <string name="yes">Yes</string>
    <string name="ok" translatable="false">OK</string>
    <string name="done">Done</string>
    <string name="no">No</string>
    <string name="alert_title">Attention</string>
    <string name="mail_not_verified">You have not verified your account, check your email and verify your account to confirm  and log in with a new account.</string>
    <string name="mail_verified">You need verified your account, check your email and verify your account </string>

    <!--DbManager -->
    <string name="item_done_delete">Delete item done</string>
    <string name="error_item_delete">Image not delete ERROR</string>

    <!--show_activity -->
    <string name="show_price">Price:</string>
    <string name="show_tel_number">Telephone number:</string>

    <!--ChooseImageActivity -->
    <string name="main_image">Main image</string>
    <string name="image_2">Image 2</string>
    <string name="image_3">Image 3</string>
    <string name="google_sign_up">Google Sign Up</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="send_email_again">Send again</string>
    <string name="sign_link_message">Log into your existing google account to register an email address</string>
    <string name="account_linked">you have successfully attached your email address to your google account</string>
    <string name="forgoy_password">Forgot your password?</string>
    <string name="send_password">Send</string>
    <string name="message_recover_password">Enter your email to recover your password</string>
    <string name="check_your_email">Сheck your mail</string>
    <string name="error_message">ERROR forgot password</string>
    <string name="error_enter_your_email">Enter your Email!!!</string>
    <string name="ads">Ads</string>
    <string name="extra_subject">Announcement</string>
    <string name="extra_text">I am interested in your ad</string>
    <string name="to_open_with">Open with:</string>
    <string name="dont_have_app_message">You don\'t have an app to send messages!</string>
    <string name="email_two_point">Email:</string>
    <string name="my_favorites">Favorites</string>
    <string name="all_ads">All announcements</string>
    <string name="load_more">Load more...</string>
    <string name="guest">Guest</string>
    <string name="error_register">Registration error, check your internet connection</string>


</resources>