<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/ads_category_id"
        android:title="@string/ads">

        <menu>
            <item
                android:id="@+id/id_my_ads"
                android:icon="@drawable/ic_my_ads"
                android:title="@string/my_ads" />
            <item
                android:id="@+id/id_my_fav"
                android:icon="@drawable/ic_fav_selected"
                android:title="@string/my_favorites" />
            <item
                android:id="@+id/id_cars"
                android:icon="@drawable/ic_cars_ads"
                android:title="@string/cars_ads" />
            <item
                android:id="@+id/id_pc_ads"
                android:icon="@drawable/ic_pc_ads"
                android:title="@string/pc_ads" />
            <item
                android:id="@+id/id_smartphone_ads"
                android:icon="@drawable/ic_smartphone_ads"
                android:title="@string/smartphone_ads" />
            <item
                android:id="@+id/id_appliances_ads"
                android:icon="@drawable/ic_appliances_ads"
                android:title="@string/appliances_ads" />
        </menu>

    </item>


    <item
        android:id="@+id/account_category_menu"
        android:title="@string/account">
        <menu>
            <item
                android:id="@+id/id_sign_up"
                android:icon="@drawable/ic_sign_up"
                android:title="@string/sign_up" />
            <item
                android:id="@+id/id_sign_in"
                android:icon="@drawable/ic_sign_in"
                android:title="@string/sign_in" />
            <item
                android:id="@+id/id_sign_out"
                android:icon="@drawable/ic_exit"
                android:title="@string/sign_out" />
        </menu>
    </item>


</menu>