<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"

        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </androidx.viewpager.widget.ViewPager>


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClickImageViewEditAct"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintTop_toTopOf="@+id/view_pager"
        app:srcCompat="@drawable/ic_editt" />

    <TextView
        android:id="@+id/tvImagesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/light_blue"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintStart_toStartOf="@+id/view_pager" />

    <EditText
        android:id="@+id/edTitleAd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_act_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view_pager"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/edPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_act_price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view_pager"
        app:layout_constraintTop_toBottomOf="@+id/edTitleAd" />

    <EditText
        android:id="@+id/edTelephoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_tel_numb"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view_pager"
        app:layout_constraintTop_toBottomOf="@+id/edPrice" />

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_act_description"
        android:inputType="textMultiLine|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edTelephoneNumber"
        app:layout_constraintStart_toStartOf="@+id/edTelephoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/edTelephoneNumber" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintStart_toStartOf="@+id/view_pager"
        app:layout_constraintTop_toBottomOf="@+id/view_pager" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onClickSavePost"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save" />
</androidx.constraintlayout.widget.ConstraintLayout>